--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-
 <body>
     <div>
-      <p>If you're seeing this, thank you for coming here... I'm glad someone used this obscure link. I'm not using this GitHub account anymore so you can't view this website... Go to my new GitHub account: <a href="url">https://zaksomebody.github.io/ZAKSortfolio</a>... You can also find my socials there... Thanks again!!!</p>
+      <p>If you're seeing this, thank you for coming here... I'm glad someone used this obscure link. I'm not using this GitHub account anymore so you can't view this website... Go to my new GitHub account: <a href="https://zaksomebody.github.io/ZAKSortfolio">https://zaksomebody.github.io/ZAKSortfolio</a>... You can also find my socials there... Thanks again!!!</p>
     </div>
 </body>
-<script src="ZAKSportfolio.js"></script>
-
 </html>
