--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div>
-      <p>If you're seeing this, thank you for coming here... I'm glad someone used this obscure link. I'm not using this GitHub account anymore so you can't view this website... Go to my new GitHub account: <a href="https://zaksomebody.github.io/ZAKSortfolio">https://zaksomebody.github.io/ZAKSortfolio</a>... You can also find my socials there... Thanks again!!!</p>
+      <p>If you're seeing this, thank you for coming here... I'm glad someone used this obscure link. I'm not using this GitHub account anymore so you can't view this website... Go to my new GitHub account: <a href="https://github.com/ZAKSomebody">https://github.com/ZAKSomebody</a>... You can also find my socials there... Thanks again!!!</p>
     </div>
 </body>
 </html>
